# src/interfaces/payment/payment.request.ts
@@ -1,0 +1,6 @@
+export interface CreatePaymentRequest {
+  name: string;
+  description: string;
+  amount: string;
+  spaceId: string;
+}
